<resources>
    <string name="app_name">Lecture Times</string>

    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="enter_course_code">Enter Course Code</string>
    <string name="course_code">Course Code</string>
    <string name="add_course">Add Course</string>
    <string name="course_code_format_invalid">Course code format invalid.\nTry again.</string>
    <string name="undo_add">Delete Last Add</string>
    <string name="list_empty">List is empty!</string>
    <string name="file_write_error">Error Writing File</string>
    <string name="title_activity_lecture_times">LectureTimesActivity</string>

    <string name="lectures">Lectures</string>
    <string name="tutorials">Tutorials</string>
    <string name="error_fetching">Error while fetching data</string>
    <string name="request_not_successful">Request not successful</string>

    <string name="course_code_invalid">Course code invalid!</string>
    <string name="no_internet">Not connected to internet!</string>
</resources>